fixed a bug about a missing border, commented on http://openacs.org/forums/message-view?message%5fid=1877242 and talked in .lrn meeting 20080923.

--- a/www/resources/dotlrn-toolbar.css
+++ b/www/resources/dotlrn-toolbar.css
@@ -50,7 +50,7 @@
 }
 
 #dotlrn-toolbar .dt-action-list a { 
-  border: solid 0px #313063;
+  border: solid 1px #1958B7;
   color: white;
   text-decoration: none;
 }
